Complete most chattterbox functionality

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <button>Add Room</button>
       </div>
       <form action="#" id="send" method="post">
-        <input type="text" name="message" id="message"/>
-        <input type="submit" name="submit" class="submit"/>
+        <input type="text" name="message" id="message"></input>
+        <input type="submit" name="submit" class="submit" id="submit"/>
       </form>
     </div>
     <div id="chats"></div>
